Jann 30/objects/CRS__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Additional_Submission_Required__c</fullName>
        <label>Additional Submission Required</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Comments__c</fullName>
        <label>Approval Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Archive_Date__c</fullName>
        <description>DATE((Year(Date_Closed__c + 1825)), 12, 31)</description>
        <formula>DATE((Year(Date_Closed__c + 1825)), 12, 31)</formula>
        <inlineHelpText>Last day of the year when the CRS record should be considered for Archive status</inlineHelpText>
        <label>Archive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Audit_Status__c</fullName>
        <label>Audit Status</label>
        <picklist>
            <picklistValues>
                <fullName>Audit Selected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audit Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audit Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BBN__c</fullName>
        <defaultValue>&quot;BBN Not Available&quot;</defaultValue>
        <label>BBN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRS_BU_Legal_Approver_Names__c</fullName>
        <label>BU Legal Approver</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRS_BU_Legal_Approver__c</fullName>
        <label>BU Legal Approver</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRS_BU_PAC_Approver_Names__c</fullName>
        <label>BU PAC Approver</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRS_BU_PAC_Approver__c</fullName>
        <description>CRS BU PAC Approver</description>
        <label>BU PAC Approver</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRS_Beverage_Category__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Beverage Category</label>
        <referenceTo>CRS_Beverage_Category__c</referenceTo>
        <relationshipLabel>CRS for Beverage Category</relationshipLabel>
        <relationshipName>CRS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRS_Brand__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Brand</label>
        <referenceTo>CRS_Brand__c</referenceTo>
        <relationshipLabel>CRS for Brand</relationshipLabel>
        <relationshipName>CRS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRS_Business_Unit__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Business Unit</label>
        <referenceTo>CRS_Business_Unit__c</referenceTo>
        <relationshipLabel>CRS for Business Unit</relationshipLabel>
        <relationshipName>CRS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRS_Corp_Food_Law_Approver_Names__c</fullName>
        <label>Corporate Food Law Approver</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRS_Corp_Food_Law_Approver__c</fullName>
        <label>Corporate Food Law Approver</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRS_Corp_Formula_Governance_Names__c</fullName>
        <label>CRS Corporate Formula Governance</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRS_Corp_Formula_Governance__c</fullName>
        <label>CRS Corporate Formula Governance</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRS_Corp_SRA_Approver_Names__c</fullName>
        <label>Corporate SRA Approver</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRS_Corp_SRA_Approver__c</fullName>
        <label>Corporate SRA Approver</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRS_Corporate_PAC_Approver_Names__c</fullName>
        <label>Corporate PAC Approver</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRS_Corporate_PAC_Approver__c</fullName>
        <label>Corporate PAC Approver</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRS_Corporate_SRA_Approver_Message__c</fullName>
        <label>Notification Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRS_Country_Names__c</fullName>
        <label>Country</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRS_Document_Title__c</fullName>
        <inlineHelpText>Document Title for Brochures, Web Copy, etc</inlineHelpText>
        <label>Document Title (not used)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRS_Field_SRA_Approver_Names__c</fullName>
        <label>Field SRA Approver</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRS_Field_SRA_Approver__c</fullName>
        <label>Field SRA Approver</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRS_Flavor_Names__c</fullName>
        <label>Flavor</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRS_Group__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Group</label>
        <referenceTo>CRS_Group__c</referenceTo>
        <relationshipLabel>CRS for Group</relationshipLabel>
        <relationshipName>CRS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRS_Media_Type_Names__c</fullName>
        <label>Media Type</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRS_Package_Type_Names__c</fullName>
        <label>Package Type</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRS_Prior_Status__c</fullName>
        <label>CRS Prior Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRS_Product_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Product Name</label>
        <referenceTo>CRS_CRS_Product__c</referenceTo>
        <relationshipLabel>CRS for Products</relationshipLabel>
        <relationshipName>CRS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRS_REVIEW_MIGRATION__c</fullName>
        <inlineHelpText>Temporary field for data migration</inlineHelpText>
        <label>CRS_REVIEW_MIGRATION</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRS_Review__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CRS Review</label>
        <referenceTo>CRS_Review__c</referenceTo>
        <relationshipLabel>CRS</relationshipLabel>
        <relationshipName>CRS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRS_STATUS_MIGRATION__c</fullName>
        <description>Temporary field for data migration</description>
        <inlineHelpText>Temporary field for data migration</inlineHelpText>
        <label>CRS_STATUS_MIGRATION</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRS_Title__c</fullName>
        <inlineHelpText>Short title for the submission</inlineHelpText>
        <label>CRS Title</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRS_Type_Names__c</fullName>
        <label>CRS Type</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRS_VP_Chief_Scientific_Regulatory_Names__c</fullName>
        <label>VP-Chief Scientific &amp; Regulatory</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRS_VP_Chief_Scientific_Regulatory__c</fullName>
        <label>VP-Chief Scientific &amp; Regulatory</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRS_VP_Science_Division_Names__c</fullName>
        <label>VP-Science Division</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRS_VP_Science_Division__c</fullName>
        <label>VP-Science Division</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Claim_Owner_and_Email_Id__c</fullName>
        <label>Claim Owner and Email Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conditional_Approval_Required__c</fullName>
        <label>Approve Conditional</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Reviewer_s__c</fullName>
        <label>Current Reviewer(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_Closed__c</fullName>
        <description>Date when CRS record is Approved, Rejected, Disapproved or Abandoned</description>
        <inlineHelpText>Date when CRS record is Approved, Rejected, Disapproved or Abandoned</inlineHelpText>
        <label>Date Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Initiated__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Date Initiated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_In_Process_After_BU_Approval__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total # of business days the submission spent in “In Process” status AFTER entering “Under Review” status.</description>
        <label>Days In Process After BU Approval</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disapproved_Reason__c</fullName>
        <description>Dependent text field when CRS Status = Disapproved, need to explain why</description>
        <inlineHelpText>Dependent text field when CRS Status = Disapproved, need to explain why</inlineHelpText>
        <label>Disapproved Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DontSend_StatusChange_Notification__c</fullName>
        <label>Don&apos;t Send &quot;Status Change&quot; Notification</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_CRSSum__c</fullName>
        <formula>IF(Individual_CRS_01__c  &lt;&gt; &quot;&quot;, Individual_CRS_01__c &amp; BR(),&quot;&quot;) +
IF(Individual_CRS_02__c  &lt;&gt; &quot;&quot;, Individual_CRS_02__c &amp; BR(),&quot;&quot;) +
IF(Individual_CRS_03__c  &lt;&gt; &quot;&quot;, Individual_CRS_03__c &amp; BR(),&quot;&quot;) +
IF(Individual_CRS_04__c  &lt;&gt; &quot;&quot;, Individual_CRS_04__c &amp; BR(),&quot;&quot;) +
IF(Individual_CRS_05__c  &lt;&gt; &quot;&quot;, Individual_CRS_05__c &amp; BR(),&quot;&quot;) +
IF(Individual_CRS_06__c  &lt;&gt; &quot;&quot;, Individual_CRS_06__c &amp; BR(),&quot;&quot;) +
IF(Individual_CRS_07__c  &lt;&gt; &quot;&quot;, Individual_CRS_07__c &amp; BR(),&quot;&quot;) +
IF(Individual_CRS_08__c  &lt;&gt; &quot;&quot;, Individual_CRS_08__c &amp; BR(),&quot;&quot;) +
IF(Individual_CRS_09__c  &lt;&gt; &quot;&quot;, Individual_CRS_09__c &amp; BR(),&quot;&quot;) +
IF(Individual_CRS_10__c  &lt;&gt; &quot;&quot;, Individual_CRS_10__c &amp; BR(),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Individual CRS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_CRS_01__c</fullName>
        <inlineHelpText>Individual CRS To Be Approved for Labels, Advertising, etc</inlineHelpText>
        <label>Individual CRS 01</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_CRS_02__c</fullName>
        <inlineHelpText>Individual CRS To Be Approved for Labels, Advertising, etc</inlineHelpText>
        <label>Individual CRS 02</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_CRS_03__c</fullName>
        <inlineHelpText>Individual CRS To Be Approved for Labels, Advertising, etc</inlineHelpText>
        <label>Individual CRS 03</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initiated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Initiated For</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CRS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internal_Status2__c</fullName>
        <description>The field keeps status for Approval process. 
NotStarted means Approvals wasn&apos;t started or is recalled - it is a sign that &apos;Submit for Approval&apos; button can be shown. 
RuNext means next step of Approval Process should be started immediately.
Wait means wait response about next step or wait for approve/reject decision.</description>
        <label>Internal Status2</label>
        <picklist>
            <picklistValues>
                <fullName>NotStarted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>RunNext</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wait</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wait2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internal_Status__c</fullName>
        <description>The field keeps information about last approved step. It is used as entry criteria for next approval process.</description>
        <label>Internal Status</label>
        <picklist>
            <picklistValues>
                <fullName>BU Legal Approver</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Field SRA Approver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corp Formula Govern Approver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Food Law Approver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate SRA Approver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VP-Chief Sc and Reg Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VP-Science Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wait</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate PAC Approver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BU PAC Approver</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Key_Stakeholder_and_Email_Id__c</fullName>
        <label>Key Stakeholder and Email Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MTR_Day_Count__c</fullName>
        <inlineHelpText>Number of business days CRS has been in &quot;Under Review&quot; status</inlineHelpText>
        <label>Days Under Review</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Package_Size__c</fullName>
        <defaultValue>&quot;Package Size Not Available&quot;</defaultValue>
        <label>Package Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Flow__c</fullName>
        <label>Process Flow</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RAG_Status__c</fullName>
        <description>This field is a ‘traffic light’ field with colors red, amber &amp; green.</description>
        <formula>IF(  MTR_Day_Count__c  &gt; 10,IMAGE(&quot;resource/CRS_Red&quot;, &quot;Red&quot;,16,16),
 IF( MTR_Day_Count__c  &gt; 5,IMAGE(&quot;resource/CRS_Amber&quot;,&quot;Amber&quot;,16,16),
  IF( MTR_Day_Count__c  &gt; 0,IMAGE(&quot;resource/CRS_Green&quot;, &quot;Green&quot;,16,16),
         IMAGE(&quot;resource/CRS_Green&quot;, &quot;Green&quot;,16,16)
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RAG Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Corp_Form_Gov__c</fullName>
        <label>Send Corporate Formula Governance</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Send_Corporate_PAC__c</fullName>
        <label>Send Corporate PAC</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Send_VP_Chief__c</fullName>
        <label>Send VP-Chief Scientific &amp; Regulatory</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Send_VP_Science__c</fullName>
        <label>Send VP Science</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>CRS Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>New Submission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disapproved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abandoned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditionally Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved-Obsolete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_CRS__c</fullName>
        <description>How many CRS to be Approved text fields have input values in them (Individual CRS 01 - Individual CRS 10)</description>
        <inlineHelpText>How many &apos;CRS to be Approved&apos; text fields have input values in them (Individual CRS 01 - Individual CRS 10)</inlineHelpText>
        <label>Total CRS</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Days_Since_Initiated__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total # of business days from the date the submission was created until today’s system date. It should stop counting the day it gets approved/rejected the first time. If it gets reactivated, the system would add to the existing count</description>
        <label>Total Days Since Initiated</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Page_Count__c</fullName>
        <label>Total Page Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnderReviewApprovalValidationCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UnderReviewApprovalValidationCheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isReactivated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isReactivated</label>
        <type>Checkbox</type>
    </fields>
    <label>CRS</label>
    <listViews>
        <fullName>ASEAN_BU_by_Year</fullName>
        <columns>NAME</columns>
        <columns>CRS_Product_Name__c</columns>
        <columns>Initiated_By__c</columns>
        <columns>CRS_BU_Legal_Approver_Names__c</columns>
        <columns>CRS_Field_SRA_Approver_Names__c</columns>
        <columns>Date_Initiated__c</columns>
        <columns>Date_Closed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CRS_Business_Unit__c</field>
            <operation>equals</operation>
            <value>ASEAN Business Unit</value>
        </filters>
        <label>ASEAN BU by Year</label>
    </listViews>
    <listViews>
        <fullName>All_CRS</fullName>
        <columns>NAME</columns>
        <columns>Date_Initiated__c</columns>
        <columns>Date_Closed__c</columns>
        <columns>CRS_Country_Names__c</columns>
        <columns>BBN__c</columns>
        <columns>CRS_Product_Name__c</columns>
        <columns>Process_Flow__c</columns>
        <columns>CRS_Document_Title__c</columns>
        <columns>Status__c</columns>
        <columns>MTR_Day_Count__c</columns>
        <columns>CRS_Group__c</columns>
        <columns>CRS_Business_Unit__c</columns>
        <columns>Total_Page_Count__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CRS__c.CRS_submission</value>
        </filters>
        <label>All CRS</label>
    </listViews>
    <listViews>
        <fullName>All_CRS_Abandoned</fullName>
        <columns>NAME</columns>
        <columns>Date_Initiated__c</columns>
        <columns>CRS_Country_Names__c</columns>
        <columns>CRS_Product_Name__c</columns>
        <columns>CRS_Document_Title__c</columns>
        <columns>Status__c</columns>
        <columns>Total_Page_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Abandoned</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CRS__c.CRS_submission</value>
        </filters>
        <label>All CRS (Abandoned)</label>
        <sharedTo>
            <role>CRS_Only</role>
            <role>CRS_gvwCRS</role>
            <role>Top_Level</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_CRS_Completed</fullName>
        <columns>NAME</columns>
        <columns>Date_Initiated__c</columns>
        <columns>CRS_Country_Names__c</columns>
        <columns>CRS_Product_Name__c</columns>
        <columns>CRS_Document_Title__c</columns>
        <columns>Status__c</columns>
        <columns>Total_Page_Count__c</columns>
        <columns>CRS_Type_Names__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved,Rejected</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CRS__c.CRS_submission</value>
        </filters>
        <label>All CRS (Approved/Rejected)</label>
        <sharedTo>
            <role>CRS_Only</role>
            <role>CRS_gvwCRS</role>
            <role>Top_Level</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_CRS_Draft</fullName>
        <columns>NAME</columns>
        <columns>Date_Initiated__c</columns>
        <columns>CRS_Country_Names__c</columns>
        <columns>CRS_Product_Name__c</columns>
        <columns>CRS_Document_Title__c</columns>
        <columns>Status__c</columns>
        <columns>Total_Page_Count__c</columns>
        <columns>Initiated_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CRS__c.CRS_submission</value>
        </filters>
        <label>All CRS (Draft)</label>
        <sharedTo>
            <group>CRS_Business_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_CRS_In_Process</fullName>
        <columns>NAME</columns>
        <columns>Date_Initiated__c</columns>
        <columns>CRS_Title__c</columns>
        <columns>CRS_Country_Names__c</columns>
        <columns>CRS_Product_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Total_Page_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CRS__c.CRS_submission</value>
        </filters>
        <label>All CRS (In Process)</label>
        <sharedTo>
            <role>CRS_Only</role>
            <role>CRS_gvwCRS</role>
            <role>Top_Level</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_CRS_New_Submissions</fullName>
        <columns>NAME</columns>
        <columns>Date_Initiated__c</columns>
        <columns>CRS_Country_Names__c</columns>
        <columns>CRS_Product_Name__c</columns>
        <columns>CRS_Document_Title__c</columns>
        <columns>Status__c</columns>
        <columns>Total_Page_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New Submission</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CRS__c.CRS_submission</value>
        </filters>
        <label>All CRS (New Submissions)</label>
        <sharedTo>
            <role>CRS_Only</role>
            <role>CRS_gvwCRS</role>
            <role>Top_Level</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_CRS_Under_Review</fullName>
        <columns>NAME</columns>
        <columns>CRS_Review__c</columns>
        <columns>CRS_Title__c</columns>
        <columns>Date_Initiated__c</columns>
        <columns>CRS_Country_Names__c</columns>
        <columns>CRS_Product_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Total_Page_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Under Review</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CRS__c.CRS_submission</value>
        </filters>
        <label>All CRS (Under Review)</label>
        <sharedTo>
            <group>CRS_Business_Admin</group>
            <group>CRS_Corporate_Level</group>
            <group>CRS_Review_Only</group>
            <role>Top_Level</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_gvwCRS</fullName>
        <columns>NAME</columns>
        <columns>Date_Initiated__c</columns>
        <columns>CRS_Country_Names__c</columns>
        <columns>CRS_Product_Name__c</columns>
        <columns>CRS_Document_Title__c</columns>
        <columns>Status__c</columns>
        <columns>Total_Page_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CRS__c.glaceau_vitaminwater_CRS</value>
        </filters>
        <label>All gvwCRS</label>
        <sharedTo>
            <role>CRS_gvwCRS</role>
            <role>Top_Level</role>
            <role>gvwCRS_Only</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_gvwCRS_Abandoned</fullName>
        <columns>NAME</columns>
        <columns>Date_Initiated__c</columns>
        <columns>CRS_Country_Names__c</columns>
        <columns>CRS_Product_Name__c</columns>
        <columns>CRS_Document_Title__c</columns>
        <columns>Status__c</columns>
        <columns>Total_Page_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Abandoned</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CRS__c.glaceau_vitaminwater_CRS</value>
        </filters>
        <label>All gvwCRS (Abandoned)</label>
        <sharedTo>
            <role>CRS_gvwCRS</role>
            <role>Top_Level</role>
            <role>gvwCRS_Only</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_gvwCRS_Completed</fullName>
        <columns>NAME</columns>
        <columns>Date_Initiated__c</columns>
        <columns>CRS_Country_Names__c</columns>
        <columns>CRS_Product_Name__c</columns>
        <columns>CRS_Document_Title__c</columns>
        <columns>Status__c</columns>
        <columns>Total_Page_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved,Rejected</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CRS__c.glaceau_vitaminwater_CRS</value>
        </filters>
        <label>All gvwCRS (Approved/Rejected)</label>
        <sharedTo>
            <role>CRS_gvwCRS</role>
            <role>Top_Level</role>
            <role>gvwCRS_Only</role>
        </sharedTo>
    </listViews>
</CustomObject>